# sane-django-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data.json  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: run_tests.yml
core/: __init__.py  constants.py
core/context_processors/: __init__.py  app_name.py  bootstrap_theme.py  icons.py  thumbnail_size.py
core/forms/: __init__.py  base_model_form.py
core/models/: __init__.py  base_model.py
core/presenters/: __init__.py  empty_state.py
core/templates/: 403.html
core/tests/: base_test.py  test_theming.py  (+1 more)
htmlcov/: d_0378e91bdae4d406___init___py.html  d_0378e91bdae4d406_base_form_mixin_py.html  d_12a9383006154ac7___init___py.html  d_12a9383006154ac7_home_view_py.html  d_132715ac4184d6ad___init___py.html  d_132715ac4184d6ad_theme_py.html  d_1e3cc1fe7b1394b2___init___py.html  d_1e3cc1fe7b1394b2_superuser_factory_py.html  d_1e3cc1fe7b1394b2_user_factory_py.html  d_1e3cc1fe7b1394b2_user_preferences_factory_py.html  d_457a096bcc52aa1b_test_login_view_py.html  d_457a096bcc52aa1b_test_registration_view_py.html  d_457a096bcc52aa1b_test_user_detail_view_py.html  d_457a096bcc52aa1b_test_user_preferences_update_view_py.html  d_457a096bcc52aa1b_test_user_py.html  d_499076dff01e7029___init___py.html  d_499076dff01e7029_login_view_py.html  d_499076dff01e7029_logout_view_py.html  d_499076dff01e7029_password_change_done_view_py.html  d_499076dff01e7029_password_change_view_py.html  d_499076dff01e7029_password_reset_complete_view_py.html  d_499076dff01e7029_password_reset_confirm_view_py.html  d_499076dff01e7029_password_reset_done_view_py.html  d_499076dff01e7029_password_reset_view_py.html  d_499076dff01e7029_registration_view_py.html  d_499076dff01e7029_user_detail_view_py.html  d_499076dff01e7029_user_preferences_update_view_py.html  d_532cc49b338fe06e_urls_py.html  d_57760688d1f824db___init___py.html  d_57760688d1f824db_apps_py.html  d_87820ab5f1879036___init___py.html  d_87820ab5f1879036_base_model_py.html  d_96b076e8598e9028_base_settings_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_urls_py.html  d_a315218f1a29990c___init___py.html  d_a315218f1a29990c_login_form_py.html  d_a315218f1a29990c_password_change_form_py.html  d_a315218f1a29990c_password_reset_form_py.html  d_a315218f1a29990c_registration_form_py.html  (+29 more)
pages/: urls.py
sane_django_template/: asgi.py  urls.py  wsgi.py
scripts/: delete_existing_migration_files.sh  down.sh  down_up.sh  flush.sh  lint.sh  make_migrations.sh  migrate.sh  regenerate_db_schema.sh  seed.sh  shell.sh  total_reset.sh  up.sh
users/: admin.py  urls.py
(+74 files in other folders)
