[tool.poetry]
name = "sane_django_template"
version = "0.0.1"
description = "A sane Django template"
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
black = "22.3.0"
Django = "4.2.5"
django-bootstrap-v5 = "1.0.11"
django-compressor = "^4.4"
django-imagekit = "^4.1.0"
django-libsass = "^0.9"
django-verify-email = "^2.0.3"
djlint = "^1.31.1"
factory-boy = "^3.2.1"
freezegun = "^1.2.2"
ipython = "^8.14.0"
lazy-import = "^0.2.2"
opencv-python = "^4.8.0.74"
pillow = "9.5.0"               # Can't upgrade to 10.0.0 until django-imagekit supports it
pycln = "^2.2.2"
pylibmagic = "^0.4.0"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
python = "^3.11.5"
python-magic = "^0.4.27"
rules = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
